# bpmn

./: .gitignore  BPMN-2.0.2-PDF.url  BPMN-20100501-BPMN20-FromXMI.xslt.url  BPMN-20100501-BPMN20.cmof.url  BPMN-20100501-BPMN20.xsd.url  BPMN-20100501-BPMNDI.cmof.url  BPMN-20100501-BPMNDI.xsd.url  BPMN-20100501-DC.cmof.url  BPMN-20100501-DC.xsd.url  BPMN-20100501-DI.cmof.url  BPMN-20100501-DI.xsd.url  BPMN-20100501-Semantic.xsd.url  BPMN-20100502-Infrastructure.cmof.url  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  relatorio_bpmn_validator.docx  validate-bpmn.skill
.claude/skills/: validate-bpmn.md
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
bpmn_validator/: __init__.py  cli.py  models.py  parser.py  schema_validator.py  semantic_validator.py  spec_downloader.py  validator.py
bpmn_validator/rules/: __init__.py  base.py  best_practices.py  collaboration.py  data.py  events.py  gateways.py  message_flows.py  process_structure.py  sequence_flows.py  tasks.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_error_handling.py  test_models.py  test_parser.py  test_schema_validator.py  test_security.py  test_semantic_validator.py  test_spec_downloader.py  test_validator.py
tests/fixtures/invalid_semantic/: no_end_event.bpmn  no_start_event.bpmn
tests/fixtures/valid/: collaboration.bpmn  simple_process.bpmn
tests/test_rules/: test_base.py  test_best_practices.py  test_collaboration.py  test_data.py  test_events.py  test_gateways.py  test_message_flows.py  test_null_root.py  test_process_structure.py  test_sequence_flows.py  test_tasks.py
